--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,9 @@
 
 :root {
     --primary-colour:  #047aed;
+    --secondary-colour:  #1c3fa8;
+    --dark-colour:  #002240;
+    --light-colour:  #f4f4f4;
 
 }
 
@@ -165,14 +168,86 @@ img {
 
 
 
+/* Cloud */
+
+.cloud .grid {
+    grid-template-columns: 4fr 3fr;
+}
 
 
+/* Languages */
+
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+    transition: transform 0.2s ease-in;
+}
+
+.languages .card:hover {
+    transform: translateY(-15px);
+}
 
 
+.languages .card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
 
 
+/* Footer */
+
+.footer .social a {
+    margin: 0 10px;
+}
 
 
+/* Tablets  */
+
+@media (max-width: 768px) {
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .awingu .grid,
+    .cloud .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }
+
+    .showcase {
+        height: auto;
+    }
+
+    .shocase-text {
+        text-align: center;
+        margin-top: 40px;
+    }
+
+    .showcase-form {
+        justify-self: center;
+        margin: auto;
+    }
+}
+
+@media (max-width: 500px) {
+    
+    .navbar {height: 110px;
+
+    }
+    .navbar .flex {
+        flex-direction: column;
+    }
+
+    .navbar ul {
+        padding: 10px;
+        background-color: rgba(0,0,0, 0.1) ;
+    }
+
+
+}
 
 
 
