--- a/css/utilities.css
+++ b/css/utilities.css
@@ -58,6 +58,53 @@
     grid-template-columns: repeat(3, 1fr);
 }
 
+
+/* Backgrounds & Primary */
+
+.bg-primary, .btn-primary  {
+    background-color: var(--primary-colour);
+    color: white;
+}
+.bg-secondary, .btn-secondary  {
+    background-color: var(--secondary-colour);
+    color: white;
+}
+.bg-dark, .btn-dark  {
+    background-color: var(--dark-colour);
+    color: white;
+}
+
+.bg-primary a,
+.btn-primary a,
+.bg-secondary a,
+.btn-secondary a,
+.bg-dark a,
+.btn-dark a {
+    color: white;
+}
+
+/* Text Sizes */
+
+.lead {
+    font-size: 20px;
+}
+
+.sm {
+    font-size: 1rem;
+}
+
+.md {
+    font-size: 2rem;
+}
+
+.lg {
+    font-size: 3rem;
+}
+
+.xl {
+    font-size: 4rem;
+}
+
 /* Margin */
 
 .my-1 {
